--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -7,13 +7,19 @@ find_package(GMP REQUIRED)
 find_package(MPFR REQUIRED)
 find_package(MKL REQUIRED)
 
-set(TARGET_PRICER_BENCHMARKS_SOURCES
+set(TARGET_PRICER_BENCHMARK_SOURCES
         math/mkl-pricer-benchmark.cc
-        math/pricers/sleef-pricer-benchmark.cc
+        math/sleef-pricer-benchmark.cc
         main.cc)
 
+include_directories(
+        ./
+        ../src/
+        $ENV{SPACK_TRANSITIVE_INCLUDE_PATH}
+        ${MKL_INCLUDE_DIRS})
 
-add_executable(${TARGET_PRICER_BENCHMARK} ${TARGET_PRICER_SOURCES})
+
+add_executable(${TARGET_PRICER_BENCHMARK} ${TARGET_PRICER_BENCHMARK_SOURCES})
 target_link_libraries(${TARGET_PRICER_BENCHMARK}
         pthread
         dl
@@ -23,7 +29,8 @@ target_link_libraries(${TARGET_PRICER_BENCHMARK}
         ${FLINT_LIBRARIES}
         ${Arb_LIBRARIES}
         sleef
-        ${TARGET_LIBPRICER})
+        ${TARGET_LIBPRICER}
+        ${benchmark_LIBRARIES})
 
 if ("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
     target_link_libraries(Pricer-Benchmark Shlwapi)
