--- a/3rdParty/sleef/CMakeLists.txt
+++ b/3rdParty/sleef/CMakeLists.txt
@@ -2,10 +2,10 @@
 
 option(BUILD_SHARED_LIBS "Build shared libs" ON)
 option(BUILD_LIBM "libsleef will be built." ON)
-option(BUILD_DFT "libsleefdft will be built." ON)
+option(BUILD_DFT "libsleefdft will be built." OFF)
 option(BUILD_QUAD "libsleefquad will be built." OFF)
 option(BUILD_GNUABI_LIBS "libsleefgnuabi will be built." ON)
-option(BUILD_TESTS "Tests will be built." ON)
+option(BUILD_TESTS "Tests will be built." OFF)
 
 option(SLEEF_TEST_ALL_IUT "Perform tests on implementations with all vector extensions" OFF)
 option(SLEEF_SHOW_CONFIG "Show SLEEF configuration status messages." ON)
