--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,6 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 include(cmake/CCache.cmake)
 
 
-
-
-
-
 #
 # builds libpricer
 set(TARGET_LIBPRICER "pricer")
@@ -80,72 +76,15 @@ IF ("${isSystemDir}" STREQUAL "-1")
 ENDIF ("${isSystemDir}" STREQUAL "-1")
 
 
-# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -fopenmp -Ofast -march=native -fno-omit-frame-pointer -ffp-contract=off -fno-math-errno -fno-trapping-math -O3 -fPIC")
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fopenmp -Ofast -march=native -fno-omit-frame-pointer -ffp-contract=off -fno-math-errno -fno-trapping-math -O3 -fPIC")
-
-
-
-
 add_subdirectory(src)
 
-if (${OPTION_BUILD_TESTS})
-    add_subdirectory(tests)
-endif ()
 
-if (${OPTION_BUILD_BENCHMARKS})
-    add_subdirectory(benchmarks)
-endif ()
+if( ${CMAKE_BUILD_TYPE} MATCHES "Debug" )
+    if (${OPTION_BUILD_TESTS})
+        add_subdirectory(tests)
+    endif ()
 
-# find_package(GoogleBenchmark REQUIRED)
-# find_package(Catch2 REQUIRED)
-# find_package(MKL REQUIRED)
-
-# find_package(ARB REQUIRED)
-# find_package(FLINT REQUIRED)
-# find_package(GMP REQUIRED)
-# find_package(MPFR REQUIRED)
-
-# find_package(SLEEF REQUIRED)
-
-
-# set(CMAKE_VERBOSE_MAKEFILE ON)
-
-# set(PROJECT_SOURCES src/math/pricers/mkl_pricer.c
-#         3rdParty/sleef/src/libm/sleefsimddp.c
-#         3rdParty/sleef/src/libm/rempitab.c
-#         src/math/pricers/sleef_pricer.c)
-# set(PROJECT_HEADERS src/math/pricers/mkl_pricer.h
-#         3rdParty/sleef/src/arch/helperadvsimd.h
-#         3rdParty/sleef/src/arch/helperavx.h
-#         3rdParty/sleef/src/arch/helperavx2.h
-#         3rdParty/sleef/src/arch/helperavx2_128.h
-#         3rdParty/sleef/src/arch/helperavx512f.h
-#         3rdParty/sleef/src/arch/helperneon32.h
-#         3rdParty/sleef/src/arch/helperpower_128.h
-#         3rdParty/sleef/src/arch/helperpurec.h
-#         3rdParty/sleef/src/arch/helpersse2.h
-#         3rdParty/sleef/src/arch/helpersve.h
-#         3rdParty/sleef/src/arch/helpervecext.h
-#         3rdParty/sleef/src/common/misc.h
-#         3rdParty/sleef/src/libm/dd.h
-#         src/math/pricers/sleef_pricer.h)
-
-
-# set(PROJECT_TEST_SOURCES tests/math/pricers/Pricer.h tests/math/pricers/mkl-pricer-test.cc tests/math/pricers/sleef-pricer-test.cc)
-
-# set(PROJECT_BENCHMARK_SOURCES benchmarks/main.cc benchmarks/math/mkl-pricer-benchmark.cc benchmarks/math/sleef-pricer-benchmark.cc)
-
-# include_directories(./ $ENV{SPACK_TRANSITIVE_INCLUDE_PATH} ${MKL_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/3rdParty/sleef/src/arch ${CMAKE_SOURCE_DIR}/3rdParty/sleef/src/common ${CMAKE_SOURCE_DIR}/3rdParty/sleef/src/libm)
-
-# add_executable(Pricer ${PROJECT_SOURCES} ${PROJECT_HEADERS} src/main.cpp)
-# target_link_libraries(Pricer pthread dl ${MKL_LIBRARIES})
-
-# add_executable(Pricer-Tests tests/main.cc ${PROJECT_TEST_SOURCES} ${PROJECT_SOURCES} ${PROJECT_HEADERS})
-# target_link_libraries(Pricer-Tests pthread dl ${MKL_LIBRARIES} ${GMP_LIBRARIES} ${MPFR_LIBRARIES} ${FLINT_LIBRARIES} ${Arb_LIBRARIES})
-
-# add_executable(Pricer-Benchmark benchmarks/main.cc ${PROJECT_BENCHMARK_SOURCES} ${PROJECT_SOURCES} ${PROJECT_HEADERS})
-# target_link_libraries(Pricer-Benchmark pthread dl ${SLEEF_LIBRARIES} ${MKL_LIBRARIES} ${benchmark_LIBRARIES})
-
-# if ("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
-#     target_link_libraries(Pricer-Benchmark Shlwapi)
-# endif ()
+    if (${OPTION_BUILD_BENCHMARKS})
+        add_subdirectory(benchmarks)
+    endif ()
+endif()
