--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,11 +7,12 @@ find_package(FLINT REQUIRED)
 find_package(GMP REQUIRED)
 find_package(MPFR REQUIRED)
 find_package(MKL REQUIRED)
+find_package(ERFA REQUIRED)
 
 set(TARGET_PRICER_TEST_SOURCES
         math/pricers/mkl-pricer-test.cc
         math/pricers/sleef-pricer-test.cc
-        main.cc)
+        main.cc IO/io_tests.cc)
 
 set(TARGET_PRICER_TTEST_HEADERS
         math/pricers/Pricer.h)
@@ -19,9 +20,11 @@ set(TARGET_PRICER_TTEST_HEADERS
 include_directories(
         ./
         ../src/
+        ../src/include/
         ${CMAKE_BINARY_DIR}
         $ENV{SPACK_TRANSITIVE_INCLUDE_PATH}
-        ${MKL_INCLUDE_DIRS})
+        ${MKL_INCLUDE_DIRS}
+        ${ERFA_INCLUDE_DIR})
 
 
 add_executable(${TARGET_PRICER_TEST} ${TARGET_PRICER_TEST_SOURCES} ${TARGET_PRICER_TEST_HEADERS})
@@ -36,4 +39,5 @@ target_link_libraries(${TARGET_PRICER_TEST}
         sleef
         ${TARGET_LIBPRICER}
         ${TARGET_ASMLIB}
+        ${ERFA_LIBRARIES}
         Catch2::Catch2)
