--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -14,6 +14,7 @@ set(TARGET_PRICER_BENCHMARK_SOURCES
 
 include_directories(
         ./
+        ./include
         ../src/
         ${CMAKE_BINARY_DIR}
         $ENV{SPACK_TRANSITIVE_INCLUDE_PATH}
