--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,11 +1,12 @@
 
-
 find_package(GoogleBenchmark REQUIRED)
 find_package(ARB REQUIRED)
 find_package(FLINT REQUIRED)
 find_package(GMP REQUIRED)
 find_package(MPFR REQUIRED)
 find_package(MKL REQUIRED)
+
+find_package(CLI11 CONFIG REQUIRED)
 
 set(TARGET_PRICER_BENCHMARK_SOURCES
         math/mkl-pricer-benchmark.cc
@@ -32,9 +33,7 @@ target_link_libraries(${TARGET_PRICER_BENCHMARK}
         ${Arb_LIBRARIES}
         sleef
         ${TARGET_LIBPRICER}
-        stdc++
-        ${benchmark_LIBRARIES}
-        stdc++)
+        ${benchmark_LIBRARIES})
 
 if ("${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
     target_link_libraries(Pricer-Benchmark Shlwapi)
